# Practica-examen

./: CMakeLists.txt  README.md  main.cpp
eje1/: Condicionales.cpp  Condicionales.h
eje2/: switch.cpp  switch.h
eje3/: bucles.cpp  bucles.h
eje4/: Arrays.cpp  Arrays.h
